# koikatsu-dedupe

./: .gitignore  AGENTS.md  LICENSE  README.md
docs/superpowers/plans/: 2026-06-26-i18n.md
docs/superpowers/specs/: 2026-06-26-i18n-design.md  2026-06-26-keep-priority-design.md
scripts/: check-i18n.mjs  i18n.test.mjs  keep.test.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  core.rs  lib.rs
src-tauri/tests/: cli.rs  round.rs
