[package]
name = "app"
version = "0.1.11"
description = "Koikatsu card deduplicator (byte-exact + character-data) — Tauri desktop app"
authors = ["soapproject"]
license = "MIT"
repository = "https://github.com/soapproject/koikatsu-dedupe"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Headless CLI for AI-agent / scripted use. Console subsystem; shares core.rs,
# links none of Tauri. ponytail: second bin beats AttachConsole hacks in the GUI exe.
[[bin]]
name = "kdedupe"
path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
twox-hash = "1.6"
rusqlite = { version = "0.32", features = ["bundled"] }
trash = "5"
